--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="complete_blood_count_panel">Complete Blood Count Panel</string>
     <string name="comprehensive_metabolic_panel">Comprehensive Metabolic Panel</string>
     <string name="ok">Ok</string>
+    <string name="labResultMainHeading">Blood Work</string>
     <string-array name="types">
         <item>once</item>
         <item>twice</item>
