Fixed all misc backend and frontend bugs. Beta 1 is ready.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="comprehensive_metabolic_panel">Comprehensive Metabolic Panel</string>
     <string name="ok">Ok</string>
     <string name="labResultMainHeading">Blood Work</string>
+    <string name="bloodTracking">Lab Results Tracking</string>
+
     <string-array name="types">
         <item>once</item>
         <item>twice</item>
