added datepicker for bloodwork. Final version ready to ship.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">Application1</string>
+    <string name="app_name">Check Up</string>
     <string name="ok_button_basic_lab">Ok</string>
     <string name="basic_test">Routine checkup</string>
     <string name="complete_blood_count_panel">Complete Blood Count</string>
     <string name="comprehensive_metabolic_panel">Comprehensive Metabolic Panel</string>
     <string name="ok">Ok</string>
-    <string name="labResultMainHeading">Today\'s Blood Work</string>
+    <string name="labResultMainHeading">Blood Work</string>
     <string name="bloodTracking">Lab Results Tracking</string>
     <string name="medicationReminderHeading">Daily Medication Reminder</string>
     <string name="NoListEntered">No Record Entered</string>
@@ -19,7 +19,7 @@
     <string name="EdittextHintName">name</string>
     <string name="TimesadayText">Times a day</string>
     <string name="TRACK">TRACK</string>
-    <string name="AppNameInfoPage">App name</string>
+    <string name="AppNameInfoPage">Check Up</string>
     <string name="VersionNumberInfoPage">Version 1.0</string>
     <string name="iconsdownloadedfromICONS8">icons downloaded from ICONS8</string>
     <string name="ForFeedback">For Feedback</string>
@@ -29,7 +29,7 @@
     <string name="forBloodWork">Units for BloodWork</string>
     <string name="DeleteButton">X</string>
     <string name="UpcomingFeatures">Upcoming Features</string>
-<string name="bloodWork">Blood Work</string>
+    <string name="bloodWork">Blood Work</string>
     <string-array name="types">
         <item>once</item>
         <item>twice</item>
