started working on the extra features bloodwork module

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="DeleteButton">X</string>
     <string name="UpcomingFeatures">Upcoming Features</string>
     <string name="bloodWork">Blood Work</string>
+    <string name="DoctorsCommentText">Doctors Comment</string>
     <string-array name="types">
         <item>once</item>
         <item>twice</item>
