--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Check Up</string>
-    <string name="YourBloodWork">My BloodWork Record</string>
+    <string name="YourBloodWork">My Medical Record</string>
     <string name="YourMedication">My Medication Record</string>
     <string name="AlertType">Notification type</string>
     <string name="AlertOnce">Once</string>
